Fixed games grid formatting, updated some css -- may still need some spacing changes on titles

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -10,7 +10,8 @@ body {
 .navbar-fixed-top {
   margin-bottom: 0px;
   margin-top: 20px;
-  position: absolute;
+  position: fixed;
+  top: 0;
   z-index: 9999;
 }
 .navbar-brand {
